Convert Configuration and Repository to use Java records.